conf/db/Estensioni/RepClassAttivitaSoftre.txt
<B>2024-05-21 11:26:42</B><BR>
W:\PthDev\Projects\Panthera\AtvSoftre\conf\db\Estensioni\00003\src\it\softre\thip\base\attivita\AttivitaSoftrePO.java:981: error: cannot find symbol
    String key = iAzienda.getKey();
                 ^
  symbol:   variable iAzienda
  location: class AttivitaSoftrePO
W:\PthDev\Projects\Panthera\AtvSoftre\conf\db\Estensioni\00003\src\it\softre\thip\base\attivita\AttivitaSoftrePO.java:1393: error: cannot find symbol
    iAzienda.setKey(idAzienda);
    ^
  symbol:   variable iAzienda
  location: class AttivitaSoftrePO
W:\PthDev\Projects\Panthera\AtvSoftre\conf\db\Estensioni\00003\src\it\softre\thip\base\attivita\AttivitaCollaboratorePO.java:228: error: cannot find symbol
    String key = iAzienda.getKey();
                 ^
  symbol:   variable iAzienda
  location: class AttivitaCollaboratorePO
W:\PthDev\Projects\Panthera\AtvSoftre\conf\db\Estensioni\00003\src\it\softre\thip\base\attivita\AttivitaCollaboratorePO.java:537: error: cannot find symbol
    iAzienda.setKey(idAzienda);
    ^
  symbol:   variable iAzienda
  location: class AttivitaCollaboratorePO
W:\PthDev\Projects\Panthera\AtvSoftre\conf\db\Estensioni\00003\src\it\softre\thip\base\attivita\AttivitaChatPO.java:287: error: cannot find symbol
    String key = iAzienda.getKey();
                 ^
  symbol:   variable iAzienda
  location: class AttivitaChatPO
W:\PthDev\Projects\Panthera\AtvSoftre\conf\db\Estensioni\00003\src\it\softre\thip\base\attivita\AttivitaChatPO.java:472: error: cannot find symbol
    iAzienda.setKey(idAzienda);
    ^
  symbol:   variable iAzienda
  location: class AttivitaChatPO
6 errors
<BR><B>La compilazione classi Java è completata con errore</B><BR>
<BR>ERRORE : Errori rilevati durante la generazione di classe
